kubernetes/_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: deployment
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app
    spec:
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      containers:
        - image: app
          imagePullPolicy: IfNotPresent
          name: app
          livenessProbe:
            httpGet:
              path: /nginx_status
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              memory: "32Mi"
              cpu: "10m"
