kubernetes/_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: app
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
